Fix header and image cropping
Fixed some small issues in projects background.

--- a/_styles/feature.scss
+++ b/_styles/feature.scss
@@ -12,18 +12,21 @@ $wrap: 800px;
 }
 
 .feature-image {
+  display: block;
   flex-shrink: 0;
   width: 40%;
   aspect-ratio: 3 / 2;
+  background: var(--background-alt);
   border-radius: var(--rounded);
   overflow: hidden;
   box-shadow: var(--shadow);
 }
 
 .feature-image img {
+  display: block;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .feature-text {
